--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chai": "4.1",
-    "mocha": "5.0"
+    "babel-core": "6.21.0",
+    "babel-loader": "6.2.10",
+    "babel-preset-es2015": "6.18.0",
+    "chai": "4.1.2",
+    "mocha": "5.0.0",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.4.1"
   }
 }
