--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "tests"
   },
   "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server",
     "test": "mocha tests/* && exit 0"
   },
   "author": "",
